pkl-core/src/test/files/LanguageSnippetTests/output/errors/nested1.err
–– Pkl Error ––
Keyword `outer` is not allowed here. (If you must use this name as identifier, enclose it in backticks.)

x | x = outer.outer // nested syntax error
              ^^^^^
at nested1 (file:///$snippetsDir/input/errors/nested1.pkl)
